add detailed movie page with some details. search works on text changed
future todos:
use resource instead of http in services.js
key shortcut to move window from one monitor to another
use router-ui instead of angular's
add reviews list as directive (and learn directives)
change to generator
deploy to my android to check smoothnes
enlarge the poster on detailed page
set serch to work on text change

--- a/www/templates/movie-detail.html
+++ b/www/templates/movie-detail.html
@@ -4,11 +4,11 @@
 
         <div class="list card">
             <div class="item item-avatar">
-                <img src="{{currentMovie.posters.original }}"/>
-
+                <img ng-src="{{currentMovie.posters.detailed }}"/>
                 <h2>{{currentMovie.year}} {{currentMovie.title}}</h2>
-
                 <p>{{currentMovie.synopsis}}</p>
+
+                <p><></p>
             </div>
 
         </div>
