--- a/www/templates/movies-list.html
+++ b/www/templates/movies-list.html
@@ -3,7 +3,8 @@
     <div class="bar bar-subheader item-input-inset">
         <label class="item-input-wrapper">
             <i class="icon ion-ios7-search placeholder-icon"></i>
-            <input id="searchKey" type="search" placeholder="Search" ng-model="searchKey" autocorrect="off">
+            <input id="searchKey" type="search" placeholder="Search" ng-model="searchKey" ng-change="search()"
+                   autocorrect="off">
             <button class="button button-clear" ng-click="clearSearch()">X</button>
         </label>
         <button class="button button-clear" ng-click="search()">Search</button>
@@ -12,9 +13,10 @@
     <ion-content class="has-header has-subheader">
         <ion-list>
             <ion-item ng-repeat="movie in movies" type="item-text-wrap" class="item-avatar"
-                      ng-click="movieClick(movie)">
-                <!--href="#/movies/{{movie.id}}"-->
-                <img src="{{movie.posters.thumbnail}}"/>
+                      href="#/details/{{movie.id}}">
+                <!--ng-click="movieClick(movie)">-->
+
+                <img ng-src="{{movie.posters.thumbnail}}"/>
 
                 <p>{{movie.title}}</p>
             </ion-item>
