V set serch to work on text change V use resource instead of http in services.js V add reviews list as directive (and learn directives)
future todos:
use resource for detailed page
summery -> cut lines
change to generator
deploy to my android to check smoothnes
enlarge the poster on detailed page

--- a/www/templates/movie-detail.html
+++ b/www/templates/movie-detail.html
@@ -7,10 +7,16 @@
                 <img ng-src="{{currentMovie.posters.detailed }}"/>
                 <h2>{{currentMovie.year}} {{currentMovie.title}}</h2>
                 <p>{{currentMovie.synopsis}}</p>
-
-                <p><></p>
             </div>
+            <div class="item item-avatar" ng-repeat="r in reviewsList">
+                <h2>{{r.critic}}</h2>
+                <h4>{{r.publication}} {{r.date}}</h4>
 
+                <p> " {{r.quote}} " </p>
+
+                <p><a ng-href={{r.links.review}}>to the full review....</a></p>
+
+            </div>
         </div>
 
     </ion-content>
