--- a/www/css/style.css
+++ b/www/css/style.css
@@ -15,6 +15,7 @@
 
 .card .item-avatar {
     padding-left: 110px;
+    word-wrap: break-word;
 }
 
 .card .item-avatar:first-child > img:first-child {
@@ -22,11 +23,13 @@
     max-height: 70px;
     border-radius: 35px;
     left: 15px;
+    word-wrap: break-word;
 }
 
 .card .item-avatar:first-child {
     padding-top: 24px;
     padding-left: 110px;
-    height: 90px;
+    height: 130px;
+    word-wrap: break-word;
 }
 
